corrected vertical alignment for hebergement card text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,6 +484,15 @@ button.search-button {
     margin-bottom: 0;
   }
 
+  p.espace {
+    padding: 0 0 0 5% !important;
+    margin: 0.5em 0 0 0 !important;
+  }
+
+  p.espace i {
+    padding-bottom: 20px;
+  }
+
   #hebergement .see-more {
     padding: 5% 0 0 4%;
   }
